fix: article page